Assignment_My_Compiler/build/parser.output
Grammar

    0 $accept: program $end

    1 program: func_list

    2 func_list: func_list function
    3          | function

    4 function: INT IDENT '(' param_list_opt ')' compound_stmt

    5 param_list_opt: /* empty */
    6               | param_list

    7 param_list: INT IDENT
    8           | param_list ',' INT IDENT

    9 compound_stmt: '{' stmt_list_opt '}'

   10 stmt_list_opt: /* empty */
   11              | stmt_list

   12 stmt_list: stmt_list stmt
   13          | stmt

   14 stmt: vardecl ';'
   15     | RETURN expr ';'
   16     | expr ';'
   17     | if_stmt
   18     | while_stmt
   19     | for_stmt

   20 if_stmt: IF '(' expr ')' compound_stmt
   21        | IF '(' expr ')' compound_stmt ELSE compound_stmt

   22 while_stmt: WHILE '(' expr ')' compound_stmt

   23 for_stmt: FOR '(' for_init_opt ';' for_cond_opt ';' for_increment_opt ')' compound_stmt

   24 for_init_opt: /* empty */
   25             | INT IDENT
   26             | INT IDENT '=' expr
   27             | expr

   28 for_cond_opt: /* empty */
   29             | expr

   30 for_increment_opt: /* empty */
   31                  | expr

   32 vardecl: INT IDENT
   33        | INT IDENT '=' expr

   34 expr: expr '+' expr
   35     | expr '-' expr
   36     | expr '*' expr
   37     | expr '/' expr
   38     | expr EQ expr
   39     | expr NE expr
   40     | expr LT expr
   41     | expr GT expr
   42     | expr LE expr
   43     | expr GE expr
   44     | IDENT '=' expr
   45     | primary

   46 primary: NUMBER
   47        | IDENT
   48        | IDENT '(' arg_list_opt ')'
   49        | '(' expr ')'

   50 arg_list_opt: /* empty */
   51             | arg_list

   52 arg_list: expr
   53         | arg_list ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 20 21 22 23 48 49
')' (41) 4 20 21 22 23 48 49
'*' (42) 36
'+' (43) 34
',' (44) 8 53
'-' (45) 35
'/' (47) 37
';' (59) 14 15 16 23
'=' (61) 26 33 44
'{' (123) 9
'}' (125) 9
error (256)
INT (258) 4 7 8 25 26 32 33
RETURN (259) 15
IF (260) 20 21
ELSE (261) 21
WHILE (262) 22
FOR (263) 23
NUMBER (264) 46
IDENT (265) 4 7 8 25 26 32 33 44 47 48
EQ (266) 38
NE (267) 39
LT (268) 40
GT (269) 41
LE (270) 42
GE (271) 43


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1, on right: 0
func_list (30)
    on left: 2 3, on right: 1 2
function (31)
    on left: 4, on right: 2 3
param_list_opt (32)
    on left: 5 6, on right: 4
param_list (33)
    on left: 7 8, on right: 6 8
compound_stmt (34)
    on left: 9, on right: 4 20 21 22 23
stmt_list_opt (35)
    on left: 10 11, on right: 9
stmt_list (36)
    on left: 12 13, on right: 11 12
stmt (37)
    on left: 14 15 16 17 18 19, on right: 12 13
if_stmt (38)
    on left: 20 21, on right: 17
while_stmt (39)
    on left: 22, on right: 18
for_stmt (40)
    on left: 23, on right: 19
for_init_opt (41)
    on left: 24 25 26 27, on right: 23
for_cond_opt (42)
    on left: 28 29, on right: 23
for_increment_opt (43)
    on left: 30 31, on right: 23
vardecl (44)
    on left: 32 33, on right: 14
expr (45)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 15 16 20
    21 22 26 27 29 31 33 34 35 36 37 38 39 40 41 42 43 44 49 52 53
primary (46)
    on left: 46 47 48 49, on right: 45
arg_list_opt (47)
    on left: 50 51, on right: 48
arg_list (48)
    on left: 52 53, on right: 51 53


state 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    program    go to state 2
    func_list  go to state 3
    function   go to state 4


state 1

    4 function: INT . IDENT '(' param_list_opt ')' compound_stmt

    IDENT  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: func_list .
    2 func_list: func_list . function

    INT  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


state 4

    3 func_list: function .

    $default  reduce using rule 3 (func_list)


state 5

    4 function: INT IDENT . '(' param_list_opt ')' compound_stmt

    '('  shift, and go to state 8


state 6

    0 $accept: program $end .

    $default  accept


state 7

    2 func_list: func_list function .

    $default  reduce using rule 2 (func_list)


state 8

    4 function: INT IDENT '(' . param_list_opt ')' compound_stmt

    INT  shift, and go to state 9

    $default  reduce using rule 5 (param_list_opt)

    param_list_opt  go to state 10
    param_list      go to state 11


state 9

    7 param_list: INT . IDENT

    IDENT  shift, and go to state 12


state 10

    4 function: INT IDENT '(' param_list_opt . ')' compound_stmt

    ')'  shift, and go to state 13


state 11

    6 param_list_opt: param_list .
    8 param_list: param_list . ',' INT IDENT

    ','  shift, and go to state 14

    $default  reduce using rule 6 (param_list_opt)


state 12

    7 param_list: INT IDENT .

    $default  reduce using rule 7 (param_list)


state 13

    4 function: INT IDENT '(' param_list_opt ')' . compound_stmt

    '{'  shift, and go to state 15

    compound_stmt  go to state 16


state 14

    8 param_list: param_list ',' . INT IDENT

    INT  shift, and go to state 17


state 15

    9 compound_stmt: '{' . stmt_list_opt '}'

    INT     shift, and go to state 18
    RETURN  shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    FOR     shift, and go to state 22
    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    $default  reduce using rule 10 (stmt_list_opt)

    stmt_list_opt  go to state 26
    stmt_list      go to state 27
    stmt           go to state 28
    if_stmt        go to state 29
    while_stmt     go to state 30
    for_stmt       go to state 31
    vardecl        go to state 32
    expr           go to state 33
    primary        go to state 34


state 16

    4 function: INT IDENT '(' param_list_opt ')' compound_stmt .

    $default  reduce using rule 4 (function)


state 17

    8 param_list: param_list ',' INT . IDENT

    IDENT  shift, and go to state 35


state 18

   32 vardecl: INT . IDENT
   33        | INT . IDENT '=' expr

    IDENT  shift, and go to state 36


state 19

   15 stmt: RETURN . expr ';'

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 37
    primary  go to state 34


state 20

   20 if_stmt: IF . '(' expr ')' compound_stmt
   21        | IF . '(' expr ')' compound_stmt ELSE compound_stmt

    '('  shift, and go to state 38


state 21

   22 while_stmt: WHILE . '(' expr ')' compound_stmt

    '('  shift, and go to state 39


state 22

   23 for_stmt: FOR . '(' for_init_opt ';' for_cond_opt ';' for_increment_opt ')' compound_stmt

    '('  shift, and go to state 40


state 23

   46 primary: NUMBER .

    $default  reduce using rule 46 (primary)


state 24

   44 expr: IDENT . '=' expr
   47 primary: IDENT .
   48        | IDENT . '(' arg_list_opt ')'

    '='  shift, and go to state 41
    '('  shift, and go to state 42

    $default  reduce using rule 47 (primary)


state 25

   49 primary: '(' . expr ')'

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 43
    primary  go to state 34


state 26

    9 compound_stmt: '{' stmt_list_opt . '}'

    '}'  shift, and go to state 44


state 27

   11 stmt_list_opt: stmt_list .
   12 stmt_list: stmt_list . stmt

    INT     shift, and go to state 18
    RETURN  shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    FOR     shift, and go to state 22
    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    $default  reduce using rule 11 (stmt_list_opt)

    stmt        go to state 45
    if_stmt     go to state 29
    while_stmt  go to state 30
    for_stmt    go to state 31
    vardecl     go to state 32
    expr        go to state 33
    primary     go to state 34


state 28

   13 stmt_list: stmt .

    $default  reduce using rule 13 (stmt_list)


state 29

   17 stmt: if_stmt .

    $default  reduce using rule 17 (stmt)


state 30

   18 stmt: while_stmt .

    $default  reduce using rule 18 (stmt)


state 31

   19 stmt: for_stmt .

    $default  reduce using rule 19 (stmt)


state 32

   14 stmt: vardecl . ';'

    ';'  shift, and go to state 46


state 33

   16 stmt: expr . ';'
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ';'  shift, and go to state 57


state 34

   45 expr: primary .

    $default  reduce using rule 45 (expr)


state 35

    8 param_list: param_list ',' INT IDENT .

    $default  reduce using rule 8 (param_list)


state 36

   32 vardecl: INT IDENT .
   33        | INT IDENT . '=' expr

    '='  shift, and go to state 58

    $default  reduce using rule 32 (vardecl)


state 37

   15 stmt: RETURN expr . ';'
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ';'  shift, and go to state 59


state 38

   20 if_stmt: IF '(' . expr ')' compound_stmt
   21        | IF '(' . expr ')' compound_stmt ELSE compound_stmt

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 60
    primary  go to state 34


state 39

   22 while_stmt: WHILE '(' . expr ')' compound_stmt

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 61
    primary  go to state 34


state 40

   23 for_stmt: FOR '(' . for_init_opt ';' for_cond_opt ';' for_increment_opt ')' compound_stmt

    INT     shift, and go to state 62
    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    $default  reduce using rule 24 (for_init_opt)

    for_init_opt  go to state 63
    expr          go to state 64
    primary       go to state 34


state 41

   44 expr: IDENT '=' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 65
    primary  go to state 34


state 42

   48 primary: IDENT '(' . arg_list_opt ')'

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    $default  reduce using rule 50 (arg_list_opt)

    expr          go to state 66
    primary       go to state 34
    arg_list_opt  go to state 67
    arg_list      go to state 68


state 43

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr
   49 primary: '(' expr . ')'

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ')'  shift, and go to state 69


state 44

    9 compound_stmt: '{' stmt_list_opt '}' .

    $default  reduce using rule 9 (compound_stmt)


state 45

   12 stmt_list: stmt_list stmt .

    $default  reduce using rule 12 (stmt_list)


state 46

   14 stmt: vardecl ';' .

    $default  reduce using rule 14 (stmt)


state 47

   38 expr: expr EQ . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 70
    primary  go to state 34


state 48

   39 expr: expr NE . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 71
    primary  go to state 34


state 49

   40 expr: expr LT . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 72
    primary  go to state 34


state 50

   41 expr: expr GT . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 73
    primary  go to state 34


state 51

   42 expr: expr LE . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 74
    primary  go to state 34


state 52

   43 expr: expr GE . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 75
    primary  go to state 34


state 53

   34 expr: expr '+' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 76
    primary  go to state 34


state 54

   35 expr: expr '-' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 77
    primary  go to state 34


state 55

   36 expr: expr '*' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 78
    primary  go to state 34


state 56

   37 expr: expr '/' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 79
    primary  go to state 34


state 57

   16 stmt: expr ';' .

    $default  reduce using rule 16 (stmt)


state 58

   33 vardecl: INT IDENT '=' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 80
    primary  go to state 34


state 59

   15 stmt: RETURN expr ';' .

    $default  reduce using rule 15 (stmt)


state 60

   20 if_stmt: IF '(' expr . ')' compound_stmt
   21        | IF '(' expr . ')' compound_stmt ELSE compound_stmt
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ')'  shift, and go to state 81


state 61

   22 while_stmt: WHILE '(' expr . ')' compound_stmt
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ')'  shift, and go to state 82


state 62

   25 for_init_opt: INT . IDENT
   26             | INT . IDENT '=' expr

    IDENT  shift, and go to state 83


state 63

   23 for_stmt: FOR '(' for_init_opt . ';' for_cond_opt ';' for_increment_opt ')' compound_stmt

    ';'  shift, and go to state 84


state 64

   27 for_init_opt: expr .
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 27 (for_init_opt)


state 65

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr
   44     | IDENT '=' expr .

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 44 (expr)


state 66

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr
   52 arg_list: expr .

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 52 (arg_list)


state 67

   48 primary: IDENT '(' arg_list_opt . ')'

    ')'  shift, and go to state 85


state 68

   51 arg_list_opt: arg_list .
   53 arg_list: arg_list . ',' expr

    ','  shift, and go to state 86

    $default  reduce using rule 51 (arg_list_opt)


state 69

   49 primary: '(' expr ')' .

    $default  reduce using rule 49 (primary)


state 70

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   38     | expr EQ expr .
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 38 (expr)


state 71

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   39     | expr NE expr .
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 39 (expr)


state 72

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   40     | expr LT expr .
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 40 (expr)


state 73

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   41     | expr GT expr .
   42     | expr . LE expr
   43     | expr . GE expr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 41 (expr)


state 74

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   42     | expr LE expr .
   43     | expr . GE expr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 42 (expr)


state 75

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr
   43     | expr GE expr .

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 43 (expr)


state 76

   34 expr: expr . '+' expr
   34     | expr '+' expr .
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 34 (expr)


state 77

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   35     | expr '-' expr .
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 35 (expr)


state 78

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   36     | expr '*' expr .
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    $default  reduce using rule 36 (expr)


state 79

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   37     | expr '/' expr .
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    $default  reduce using rule 37 (expr)


state 80

   33 vardecl: INT IDENT '=' expr .
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 33 (vardecl)


state 81

   20 if_stmt: IF '(' expr ')' . compound_stmt
   21        | IF '(' expr ')' . compound_stmt ELSE compound_stmt

    '{'  shift, and go to state 15

    compound_stmt  go to state 87


state 82

   22 while_stmt: WHILE '(' expr ')' . compound_stmt

    '{'  shift, and go to state 15

    compound_stmt  go to state 88


state 83

   25 for_init_opt: INT IDENT .
   26             | INT IDENT . '=' expr

    '='  shift, and go to state 89

    $default  reduce using rule 25 (for_init_opt)


state 84

   23 for_stmt: FOR '(' for_init_opt ';' . for_cond_opt ';' for_increment_opt ')' compound_stmt

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    $default  reduce using rule 28 (for_cond_opt)

    for_cond_opt  go to state 90
    expr          go to state 91
    primary       go to state 34


state 85

   48 primary: IDENT '(' arg_list_opt ')' .

    $default  reduce using rule 48 (primary)


state 86

   53 arg_list: arg_list ',' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 92
    primary  go to state 34


state 87

   20 if_stmt: IF '(' expr ')' compound_stmt .
   21        | IF '(' expr ')' compound_stmt . ELSE compound_stmt

    ELSE  shift, and go to state 93

    $default  reduce using rule 20 (if_stmt)


state 88

   22 while_stmt: WHILE '(' expr ')' compound_stmt .

    $default  reduce using rule 22 (while_stmt)


state 89

   26 for_init_opt: INT IDENT '=' . expr

    NUMBER  shift, and go to state 23
    IDENT   shift, and go to state 24
    '('     shift, and go to state 25

    expr     go to state 94
    primary  go to state 34


state 90

   23 for_stmt: FOR '(' for_init_opt ';' for_cond_opt . ';' for_increment_opt ')' compound_stmt

    ';'  shift, and go to state 95


state 91

   29 for_cond_opt: expr .
   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr

    EQ   shift, and go to state 47
    NE   shift, and go to state 48
    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 29 (for_cond_opt)


state 92

   34 expr: expr . '+' expr
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . LT expr
   41     | expr . GT expr
   42     | expr . LE expr
   43     | expr . GE expr
   53 arg_list: arg_list ',' expr .
